Fixed issue with about me page spacing and removed styles from education section

--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ nav ul li a:hover::after {
 }
 
 .main-article {
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: rgba(255, 255, 255, 0.8);
     display: inline-block;
     max-width: 100%;
     padding: 20px 50px;
@@ -149,40 +149,30 @@ nav ul li a:hover::after {
     display: block;
 }
 
-.logo-div {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    background-color: rgba(255, 255, 255, 0.8);
-    border-radius: 40px;
-    margin: 0px 470px 60px;
-    padding: 20px;
-    min-width: 200px;
-}
-
 .logo {
     height: 50px;
     margin: 10px;
 }
 
 .bio-img {
-    width: 100%;
-    height: auto;
-    display: block;
+    height: 600px;
 }
 
 .image-with-text {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .image-container {
-    flex: 1;
-    margin-right: 40px;
+    flex: 0 0 40%;
 }
 
 .text-container {
-    flex: 2;
+    flex: 0 0 60%;
+}
+
+.text-container p {
+    margin-top: 0;
 }
 
 /* experience styles */
@@ -210,26 +200,6 @@ nav ul li a:hover::after {
     margin-top: 5px;
     font-size: 16px;
 }
-
-#education-div {
-    background-color: rgba(255, 255, 255, 0.8);
-    border-radius: 40px;
-    width: 100%;
-    max-width: 860px;
-    max-height: 400px;
-    margin: 0 auto 50px;
-    padding: 20px 50px 30px;
-    text-decoration: none;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-}
-
-#education-div h4 {
-    margin-top: 0;
-}
-
 
 /* tech-stack styles */
 
